--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,15 @@
+
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// Library
+@import '~font-awesome/scss/font-awesome';
+@import "~c3/c3.css";
+
+.bg-gradient {
+    height: 100%;
+    background: linear-gradient(to bottom, #019587 50%, #e6e6e6 50%, #e6e6e6);
+  }
