--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,9 @@
 @import '~font-awesome/scss/font-awesome';
 @import "~c3/c3.css";
 
+// Sidebar
+@import "sidebar";
+
 .bg-gradient {
     height: 100%;
     background: linear-gradient(to bottom, #019587 50%, #e4e4e4 50%, #e4e4e4);
