--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Niconne&display=swap');
@@ -16,4 +15,44 @@
 .bg-gradient {
     height: 100%;
     background: linear-gradient(to bottom, #019587 50%, #e4e4e4 50%, #e4e4e4);
-  }
+}
+
+#style-1 {
+    height: 100%;
+    background: linear-gradient(to bottom, #1a7065 50px, #1f272a 20px, #1f272a);
+}
+
+.dropdown-menu {
+    transition: 300ms;
+}
+
+svg.rotate-90 {
+    transform: rotate(90deg);
+}
+
+/*
+ *  STYLE 1
+ */
+
+#style-1::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 0 #1a7065;
+    border-radius: 0px;
+    background-color: #e5e7eb00;
+}
+
+#style-1::-webkit-scrollbar {
+    width: 10px;
+    background-color: #e5e7eb00;
+}
+
+#style-1::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0 0 #1a7065;
+    background-color: #1a7065;
+}
+
+#myPieChart,
+#myLineChart {
+    width: 100% !important;
+    height: auto !important;
+}
