--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3269,135 +3269,12 @@
   clip: auto;
 }
 
-.wrapper {
-  display: flex;
-  width: 100%;
-  align-items: stretch;
-}
-
-#sidebar {
-  width: 224px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  z-index: 999;
-  transition: all 0.3s;
-}
-
-#sidebar.active {
-  margin-left: -224px;
-}
-
-#sidebarCollapse {
-  width: 20px;
-  height: 20px;
-  z-index: 30;
-  position: relative;
-}
-
-#sidebarCollapse span {
-  width: 80%;
-  height: 2px;
-  margin: 0 auto;
-  display: block;
-  transition: all 0.4s cubic-bezier(0.81, -0.33, 0.345, 1.375);
-}
-
-#sidebarCollapse span:first-of-type {
-  /* rotate first one */
-  transform: rotate(45deg) translate(2px, 2px);
-}
-
-#sidebarCollapse span:nth-of-type(2) {
-  /* second one is not visible */
-  opacity: 0;
-}
-
-#sidebarCollapse span:last-of-type {
-  /* rotate third one */
-  transform: rotate(-45deg) translate(1px, -1px);
-}
-
-#sidebarCollapse.active span {
-  /* no rotation */
-  transform: none;
-  /* all bars are visible */
-  opacity: 1;
-  margin: 5px auto;
-}
-
-#content {
-  width: calc(100% - 224px);
-  min-height: 100vh;
-  transition: all 0.3s;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.sidebar-sticky .nav-link:hover,
-.sidebar-sticky .nav-link.active {
-  background-color: #e3342f;
-  color: white;
-}
-
-#content.active {
-  width: 100%;
-}
-
-@media (max-width: 768px) {
-  #content {
-    width: 100%;
-    background-color: none;
-  }
-
-  #cover {
-    height: 100%;
-    width: 100%;
-    background-color: none;
-  }
-
-  #cover.active {
-    height: 100%;
-    width: calc(100% - 224px);
-    background-color: #00000052;
-  }
-
-  #sidebar {
-    margin-left: -224px;
-  }
-
-  #sidebar.active {
-    margin-left: 0;
-  }
-
-  #sidebarCollapse span:first-of-type,
-#sidebarCollapse span:nth-of-type(2),
-#sidebarCollapse span:last-of-type {
-    transform: none;
-    opacity: 1;
-    margin: 5px auto;
-  }
-
-  #sidebarCollapse.active span:first-of-type {
-    transform: rotate(45deg) translate(2px, 2px);
-  }
-
-  #sidebarCollapse.active span:nth-of-type(2) {
-    opacity: 0;
-  }
-
-  #sidebarCollapse.active span:last-of-type {
-    transform: rotate(-45deg) translate(1px, -1px);
-  }
-}
 .bg-gradient {
   height: 100%;
   background: linear-gradient(to bottom, #019587 50%, #e4e4e4 50%, #e4e4e4);
 }
 
-#style-1 {
+.sidebar {
   height: 100%;
   background: linear-gradient(to bottom, #1a7065 50px, #1f272a 20px, #1f272a);
 }
@@ -3411,20 +3288,20 @@ svg.rotate-90 {
 }
 
 /*
- *  STYLE 1
+ * Scroll
  */
-#style-1::-webkit-scrollbar-track {
+.sidebar::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 0 #1a7065;
   border-radius: 0px;
   background-color: #e5e7eb00;
 }
 
-#style-1::-webkit-scrollbar {
+.sidebar::-webkit-scrollbar {
   width: 10px;
   background-color: #e5e7eb00;
 }
 
-#style-1::-webkit-scrollbar-thumb {
+.sidebar::-webkit-scrollbar-thumb {
   border-radius: 0px;
   -webkit-box-shadow: inset 0 0 0 #1a7065;
   background-color: #1a7065;
