--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,14 +10,14 @@
 @import "~c3/c3.css";
 
 // Sidebar
-@import "sidebar";
+// @import "sidebar";
 
 .bg-gradient {
     height: 100%;
     background: linear-gradient(to bottom, #019587 50%, #e4e4e4 50%, #e4e4e4);
 }
 
-#style-1 {
+.sidebar {
     height: 100%;
     background: linear-gradient(to bottom, #1a7065 50px, #1f272a 20px, #1f272a);
 }
@@ -31,21 +31,21 @@ svg.rotate-90 {
 }
 
 /*
- *  STYLE 1
+ * Scroll
  */
 
-#style-1::-webkit-scrollbar-track {
+.sidebar::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 0 #1a7065;
     border-radius: 0px;
     background-color: #e5e7eb00;
 }
 
-#style-1::-webkit-scrollbar {
+.sidebar::-webkit-scrollbar {
     width: 10px;
     background-color: #e5e7eb00;
 }
 
-#style-1::-webkit-scrollbar-thumb {
+.sidebar::-webkit-scrollbar-thumb {
     border-radius: 0px;
     -webkit-box-shadow: inset 0 0 0 #1a7065;
     background-color: #1a7065;
