menu button effect

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3312,6 +3312,69 @@ svg.rotate-90 {
   width: 100% !important;
   height: auto !important;
 }
+
+.mobile-menu-button span {
+  transition: all 0.4s cubic-bezier(0.81, -0.33, 0.345, 1.375);
+}
+
+.mobile-menu-button span:first-of-type {
+  /* rotate first one */
+  transform: rotate(-45deg) translate(2px, 2px);
+}
+
+.mobile-menu-button span:nth-of-type(2) {
+  /* second one is not visible */
+  opacity: 0;
+}
+
+.mobile-menu-button span:last-of-type {
+  /* rotate third one */
+  transform: rotate(45deg) translate(1px, -1px);
+}
+
+.mobile-menu-button.active span {
+  /* no rotation */
+  transform: none;
+  /* all bars are visible */
+  opacity: 1;
+  margin: 5px auto;
+}
+
+.mobile-menu-button span:first-of-type,
+.mobile-menu-button span:nth-of-type(2),
+.mobile-menu-button span:last-of-type {
+  transform: none;
+  opacity: 1;
+  margin: 5px auto;
+}
+
+.mobile-menu-button.active span:first-of-type {
+  transform: rotate(-40deg) translate(-1px, -2px);
+}
+
+.mobile-menu-button.active span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.mobile-menu-button.active span:last-of-type {
+  transform: rotate(40deg) translate(-2px, -1px);
+}
+
+/* Ripple effect Menu Button */
+.overlay {
+  background-position: center;
+  transition: background 0.4s;
+}
+
+.overlay:hover {
+  background: #ffffff00 radial-gradient(circle, transparent 1%, #269586 1%) center/15000%;
+}
+
+.overlay:active {
+  background-color: #ffffffa4;
+  background-size: 100%;
+  transition: background 0.4s;
+}
 /*! tailwindcss v2.1.2 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
